<resources>
    <string name="app_name">Slide_Android</string>
    <string name="button_login">Log in</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="registerPrompt">Don\'t have an account?</string>
    <string name="registerButton">Register</string>
    <string name="fbloginPrompt">Continue with Facebook</string>
    <string name="signUpPrompt">Sign up to connect with your network</string>
    <string name="usernameHint">Username</string>
    <string name="fullNameHint">Full Name</string>
</resources>
